# python-cdpctl

./: README.md  noxfile.py  pyproject.toml
src/cdpctl/: __init__.py  __main__.py  core.py
tests/: conftest.py  test_core.py
